# mini_rust_desk_clipboard

./: Cargo.toml  README.md
src/: context_send.rs  lib.rs
src/platform/: mod.rs  windows.rs
