[package]
name = "clipboard"
version = "0.1.0"
edition = "2021"
build = "build.rs"


[build-dependencies]
cc = "1.0"


[dependencies]
thiserror = "1.0"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
mini_rust_desk_common = { git = "https://github.com/SwartzMss/mini_rust_desk_common", rev = "6ed0bf1aae81ee3de4e84f8158d840a9812bd29a"}
parking_lot = {version = "0.12"}

